completed travel booking project

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                 <li class="list__item">Breakfast included</li>
                 <li class="list__item">Free airport shuttle</li>
                 <li class="list__item">Free WiFi in all rooms</li>
-                <li class="list__item">Air conditioning & heating</li>
+                <li class="list__item">Air condition & heat</li>
                 <li class="list__item">Pets allowed</li>
-                <li class="list__item">We speak all major languages</li>
+                <li class="list__item">All major languages</li>
                 <li class="list__item">Perfect for families</li>
               </ul>
               <div class="recommend">
